# AI-OS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  ai_os_bootstrap.pth  pyproject.toml  railway.toml
config/: README.md
config/agents/: reviewer.yaml
config/automations/: morning-briefing.yaml  morning-review.yaml  on-review-complete.yaml  weekly-review.yaml
config/onboarding/: presets.yaml
config/personal/: providers.env.example
config/workflows/: README.md  daily-review.yaml  inbox-processing.yaml  knowledge-digest.yaml  meeting-preparation.yaml  morning-briefing.yaml  project-review.yaml  repo-health.yaml  research-pipeline.yaml  travel-planning.yaml  weekly-review.yaml
decision-engine/: README.md
decision-engine/prompts/: README.md
decision-engine/templates/: README.md
docs/: OPERATING-MANUAL.md  README.md  production-readiness.md
docs/architecture/: README.md  automation-layer.md  capability-layer.md  knowledge-engine.md  layer-boundaries.md  memory-system.md  system-overview.md
docs/decisions/: ADR-001-knowledge-engine.md  README.md
docs/personal/: README.md  (+2 more)
experiments/: README.md
jbsh-me/: README.md  next.config.ts  package-lock.json  package.json
knowledge/: README.md  metadata-schema.md  pipeline.md  schema.md
memory/: README.md
scripts/: README.md  install.sh
tests/: README.md  test_api_auth.py  test_env_registry.py  test_production_ingestion.py  test_setup_onboarding.py  test_system_check.py
web/: README.md  package-lock.json  package.json
(+256 files in other folders)
