[project]
name = "ai-os"
version = "1.3.0"
description = "Personal AI Operating System — knowledge, memory, and decision engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "chromadb>=0.6",
    "html2text>=2024.2",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pypdf>=5.1",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "python-ulid>=3.0",
    "pyyaml>=6.0",
    "rank-bm25>=0.2",
    "rich>=13.9",
    "typer>=0.15",
    "watchfiles>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
ai-os = "ai_os.cli:app"
ai-os-api = "ai_os.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_os"]

[tool.hatch.build.targets.wheel.force-include]
"ai_os_bootstrap.pth" = "ai_os_bootstrap.pth"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
